--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' https://cdn.jsdelivr.net https://unpkg.com; style-src 'self' https://cdn.jsdelivr.net https://fonts.googleapis.com https://cdnjs.cloudflare.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data: https://via.placeholder.com; connect-src 'self'">
+    <meta http-equiv="Content-Security-Policy" content="
+        default-src 'self';
+        script-src 'self' https://cdn.jsdelivr.net https://unpkg.com 'unsafe-inline';
+        style-src 'self' https://cdn.jsdelivr.net https://fonts.googleapis.com https://cdnjs.cloudflare.com 'unsafe-inline';
+        font-src 'self' https://fonts.gstatic.com data:;
+        img-src 'self' data: https://via.placeholder.com https://images.unsplash.com;
+        connect-src 'self' https://images-portfolio-wp42.onrender.com;
+        frame-src 'none';
+        object-src 'none';
+    ">
     <title>मैं || Mein</title>
     <meta name="description" content="Photography portfolio showcasing my best work captured and edited on iPhone XR">
     <link rel="stylesheet" href="css/style.css">
@@ -206,14 +215,6 @@
     <script src="https://cdn.jsdelivr.net/npm/lightgallery@2.7.1/plugins/zoom/lg-zoom.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/lightgallery@2.7.1/plugins/fullscreen/lg-fullscreen.min.js"></script>
     <script src="https://unpkg.com/scrollreveal@4.0.9/dist/scrollreveal.min.js"></script>
-    <script>
-        // Initialize ScrollReveal after it's loaded
-        document.addEventListener('DOMContentLoaded', function() {
-            if (typeof ScrollReveal !== 'undefined') {
-                window.sr = ScrollReveal();
-            }
-        });
-    </script>
     <script src="js/main.js"></script>
 </body>
 </html>
