--- a/public/index.html
+++ b/public/index.html
@@ -8,30 +8,24 @@
         script-src 'self' https://cdn.jsdelivr.net https://unpkg.com;
         style-src 'self' https://cdn.jsdelivr.net https://fonts.googleapis.com https://cdnjs.cloudflare.com 'unsafe-inline';
         font-src 'self' https://fonts.gstatic.com https://cdnjs.cloudflare.com https://cdn.jsdelivr.net data:;
-        img-src 'self' data: https://via.placeholder.com https://images.unsplash.com;
+        img-src 'self' data: https://via.placeholder.com https://images-portfolio-wp42.onrender.com;
         connect-src 'self' https://images-portfolio-wp42.onrender.com;
         frame-src 'none';
         object-src 'none';
     ">
     <title>मैं || Mein</title>
     <meta name="description" content="Photography portfolio showcasing my best work captured and edited on iPhone XR">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/lightgallery@2.7.1/css/lightgallery.min.css">
 </head>
 <body>
     <!-- Preloader -->
     <div class="preloader">
         <div class="loader"></div>
-    </div>
-
-    <!-- Curtain Transition -->
-    <div class="curtain-transition">
-        <div class="curtain curtain-left"></div>
-        <div class="curtain curtain-right"></div>
     </div>
 
     <!-- Navigation -->
@@ -95,7 +89,7 @@
                 
                 <div class="about-details">
                     <div class="about-img animate-text">
-                        <img src="images/default-profile.jpg" alt="Om Kumar - Photographer" onerror="this.src='https://via.placeholder.com/400x500?text=Profile+Image'">
+                        <img src="/images/default-profile.jpg" alt="Om Kumar - Photographer">
                     </div>
                     <div class="about-text">
                         <h3 class="animate-text">Om Kumar - Developer & Photographer</h3>
@@ -215,6 +209,6 @@
     <script src="https://cdn.jsdelivr.net/npm/lightgallery@2.7.1/plugins/zoom/lg-zoom.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/lightgallery@2.7.1/plugins/fullscreen/lg-fullscreen.min.js"></script>
     <script src="https://unpkg.com/scrollreveal@4.0.9/dist/scrollreveal.min.js"></script>
-    <script src="js/main.js"></script>
+    <script src="/js/main.js"></script>
 </body>
 </html>
