--- a/public/index.html
+++ b/public/index.html
@@ -43,10 +43,10 @@
             <div class="hero-content">
                 <h1 class="hero-title animate-text">Capturing the <span>Essence</span> of Moments</h1>
                 <p class="hero-subtitle animate-text delay-1">Through the lens of creativity and passion</p>
-                <a href="#gallery" class="btn btn-primary animate-text delay-2">View Portfolio</a>
+                <a href="#gallery" class="btn btn-primary animate-text delay-2" id="viewPortfolioBtn">View Portfolio</a>
             </div>
         </div>
-        <div class="scroll-down">
+        <div class="scroll-down" id="scrollDown">
             <span></span>
             <span></span>
             <span></span>
@@ -78,7 +78,7 @@
                 
                 <div class="about-details">
                     <div class="about-img animate-text">
-                        <img src="/images/default-profile.jpg" alt="Om Kumar - Photographer">
+                        <img src="/images/default-profile.jpg" alt="Om Kumar - Photographer" loading="lazy">
                     </div>
                     <div class="about-text">
                         <h3 class="animate-text">Om Kumar - Developer & Photographer</h3>
@@ -191,7 +191,7 @@
     </footer>
 
     <!-- Back to Top Button -->
-    <a href="#" class="back-to-top"><i class="fas fa-arrow-up"></i></a>
+    <a href="#" class="back-to-top" id="backToTop"><i class="fas fa-arrow-up"></i></a>
 
     <!-- Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/scrollreveal@4.0.9/dist/scrollreveal.min.js"></script>
