--- a/public/index.html
+++ b/public/index.html
@@ -68,7 +68,7 @@
                     <img src="images/Cloud.jpeg" alt="Cloud photography" loading="lazy">
                 </div>
                 <div class="gallery-item">
-                    <img src="images/default-profile.jpeg" alt="Default profile" loading="lazy">
+                    <img src="images/default-profile.jpg" alt="Default profile" loading="lazy">
                 </div>
                 <div class="gallery-item">
                     <img src="images/exit.jpeg" alt="Exit photography" loading="lazy">
@@ -107,7 +107,7 @@
                 
                 <div class="about-details">
                     <div class="about-img">
-                        <img src="images/profile.jpg" alt="Om Kumar - Photographer" onerror="this.src='https://images.unsplash.com/photo-1535713875002-d1d0cf377fde?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=500&q=80'">
+                        <img src="images/default-profile.jpg" alt="Om Kumar - Photographer" onerror="this.src='https://images.unsplash.com/photo-1535713875002-d1d0cf377fde?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=500&q=80'">
                     </div>
                     <div class="about-text">
                         <h3>Om Kumar - Developer & Photographer</h3>
