--- a/public/index.html
+++ b/public/index.html
@@ -71,6 +71,19 @@
                     <img src="images/default-profile.jpg" alt="Default profile" loading="lazy">
                 </div>
                 <div class="gallery-item">
+                    <img src="images/way.jpg" alt="Default profile" loading="lazy">
+                </div>
+                <div class="gallery-item">
+                    <img src="images/entrance.jpg" alt="Default profile" loading="lazy">
+                </div>
+                <div class="gallery-item">
+                    <img src="images/temple.jpg" alt="Default profile" loading="lazy">
+                </div>
+                <div class="gallery-item">
+                    <img src="images/angle.jpg" alt="Default profile" loading="lazy">
+                </div>
+
+                <div class="gallery-item">
                     <img src="images/exit.jpeg" alt="Exit photography" loading="lazy">
                 </div>
                 <div class="gallery-item">
