--- a/public/index.html
+++ b/public/index.html
@@ -71,16 +71,16 @@
                     <img src="images/default-profile.jpg" alt="Default profile" loading="lazy">
                 </div>
                 <div class="gallery-item">
-                    <img src="images/way.jpg" alt="Default profile" loading="lazy">
+                    <img src="images/way.jpeg" alt="Default profile" loading="lazy">
                 </div>
                 <div class="gallery-item">
-                    <img src="images/entrance.jpg" alt="Default profile" loading="lazy">
+                    <img src="images/entrance.jpeg" alt="Default profile" loading="lazy">
                 </div>
                 <div class="gallery-item">
-                    <img src="images/temple.jpg" alt="Default profile" loading="lazy">
+                    <img src="images/temple.jpeg" alt="Default profile" loading="lazy">
                 </div>
                 <div class="gallery-item">
-                    <img src="images/angle.jpg" alt="Default profile" loading="lazy">
+                    <img src="images/angle.jpeg" alt="Default profile" loading="lazy">
                 </div>
 
                 <div class="gallery-item">
