Project thumbnails added

--- a/public/index.html
+++ b/public/index.html
@@ -155,7 +155,7 @@
             <!-- Project 1 - Swachh Bharat -->
             <div class="project-card">
                 <div class="project-image">
-                    <img src="https://source.unsplash.com/random/600x400/?cleanliness" alt="Swachh Bharat Project">
+                    <img src="images/what.jpeg" alt="Swachh Bharat Project">
                     <div class="project-links">
                         <a href="https://delightful-strudel-9135b2.netlify.app/" target="_blank" class="project-link">
                             <i class="fas fa-external-link-alt"></i> Live Demo
@@ -177,7 +177,7 @@
             <!-- Project 2 - Weather App -->
             <div class="project-card">
                 <div class="project-image">
-                    <img src="https://source.unsplash.com/random/600x400/?weather" alt="Weather App">
+                    <img src="images/Cloud.jpeg" alt="Weather App">
                     <div class="project-links">
                         <a href="https://weather-programm.onrender.com/" target="_blank" class="project-link">
                             <i class="fas fa-external-link-alt"></i> Live Demo
@@ -199,7 +199,7 @@
             <!-- Project 3 - Parasnath Hills -->
             <div class="project-card">
                 <div class="project-image">
-                    <img src="https://source.unsplash.com/random/600x400/?mountain" alt="Parasnath Hills">
+                    <img src="images/mountain.jpeg" alt="Parasnath Hills">
                     <div class="project-links">
                         <a href="https://parasnath.onrender.com/" target="_blank" class="project-link">
                             <i class="fas fa-external-link-alt"></i> Live Demo
