--- a/public/index.html
+++ b/public/index.html
@@ -240,7 +240,7 @@
                     <i class="fas fa-envelope"></i>
                     <div class="contact-details">
                         <h4>Email</h4>
-                        <p>edahnXC@gmail.com</p>
+                        <p>omk.rai879@gmail.com</p>
                     </div>
                 </div>
                 <div class="contact-item">
